web拡張の部分を作成

--- a/main.tex
+++ b/main.tex
@@ -169,12 +169,19 @@
 
 \include{chapter2}
 
-\include{word2vec}
+% \include{word2vec}
 
 \include{chapter3}
 
 % \include{chapter4}
 
+% 文書の比較方法
+\include{chapter3}
+
+\include{web_expand}
+
+
+% 実験
 \include{chapter5}
 
 \include{chapter6}
