--- a/main.tex
+++ b/main.tex
@@ -183,6 +183,9 @@
 % juliusとkaldiの認識結果とMAPの影響
 \include{recognise_method}
 
+% juliusとkaldiの認識結果とMAPの影響
+% cache, kn, rnn
+\include{feature}
 
 % 実験
 \include{chapter5}
