特徴量の追加完成

--- a/main.tex
+++ b/main.tex
@@ -183,9 +183,11 @@
 % juliusとkaldiの認識結果とMAPの影響
 \include{recognise_method}
 
-% juliusとkaldiの認識結果とMAPの影響
 % cache, kn, rnn
 \include{feature}
+
+% slide統合
+\include{slide}
 
 % 実験
 \include{chapter5}
