論文をクエリの拡張として利用した手法執筆

--- a/main.tex
+++ b/main.tex
@@ -189,11 +189,15 @@
 % slide統合
 \include{slide}
 
+% 結果の統合
+\include{integration}
+
+
 % 実験
 \include{chapter5}
 
 \include{chapter6}
-
+	
 
 
 %% è¬èŸ
