音声認識精度と検索精度, クエリの関連文書を用いたクエリ尤度モデルの拡張の修正

--- a/main.tex
+++ b/main.tex
@@ -171,17 +171,16 @@
 
 % \include{word2vec}
 
-\include{chapter3}
+% 文書の比較方法
+% \include{chapter3}
 
 % \include{chapter4}
 
-% 文書の比較方法
-\include{chapter3}
+% juliusとkaldiの認識結果とMAPの影響
+\include{recognise_method}
 
 \include{web_expand}
 
-% juliusとkaldiの認識結果とMAPの影響
-\include{recognise_method}
 
 % cache, kn, rnn
 \include{feature}
