論文の目的を作成

--- a/chapter6.tex
+++ b/chapter6.tex
@@ -4,35 +4,29 @@
 \chapter{結論} 
 \section{まとめ}
 本研究では，文書検索において検索精度に影響を及ぼす要因を4つ取りあげ，それらについて分析を行った．
-まずTF-IDFにおけるTFに関しては，BM25のようにTFを文書長による正規化を行うことにより，精度を向上させることができた．
-これは文書長が長い文書は，同じ単語が複数回出現する場合が多く，TF値が過剰に高くなる問題を解決できたと言える．
-一方でlogを用いたTFの出現回数に応じた正規化は，従来のTF-IDF法とほぼ同等の性能を示したが，BM25同様に，
-文書長が短い文書を正解とするクエリにおいて，精度が高くなる傾向にあった．
 
-word2vecを用いた文書検索法は，従来法のTF-IDFに精度では劣ったが，一部のクエリにおいてTF-IDFを大きく上回る精度を示した．
-これは，今回のword2vecの手法では，単語の意味的情報を文書検索に活かしきれていないが，
-単語ベクトルから文書ベクトルに圧縮する手法を工夫することで，TF-IDFの精度を大きく改善する可能性があると言える．
-また，TF-IDFとword2vecを用いた単語の意味的情報を加味した文書検索法を組み合わせることで，更なる精度の向上を図ることができると考えられる．
+まず，音声認識精度と検索精度に関しては，従来から使用しているJuliusによる音声認識結果より，高性能な音声認識システムであるKaldiを用いた音声認識結果を用いたときの方が，検索精度が上昇する事が確認できた．
 
-また部分文書検索の際に文書全体の情報を加味することは，精度を大幅に向上することを確認した．
-今回のSpokenQuery\&Docは，1つのクエリに対する正解文書が，1つの全体文書に固まっていることが多かったため，
-特に効果が大きかったと考えられる．
-今回は重みパラメータ$\alpha$が0.9の時に最大値を取ったが，この値は検索対象文書やタスクによって異なると考えられる．
+クエリの関連文書を用いたクエリ尤度モデルの拡張では，論文を用いたときに，MAP値の向上が見られた．しかし，Web文書を用いたときは，MAP値にあまり変化が見られなかった．これは，Web文書がNTCIR11のクエリに対して，スムージングを行なえなかったためであると推察できる．論文を用いると，専門単語も広く言語モデルとして含められるため，スムージングできる可能性が高くなり，MAP値が上昇したのだと考えられる．
 
-最後に音声文書検索の際に音声認識誤りを棄却する場合は，検索に有用な語を誤って棄却した際に，精度が劣化してしまうことが判明した．
-これは音声認識誤り語の棄却は成功しているが，同時に検索に有用な語を切り捨ててしまっていることが問題であった．
-一方で本研究では，$sumPMI$が負の単語を認識誤り単語として棄却しているが，この閾値を変化させることで，
-検索に重要な語を残しつつ，認識誤り単語を棄却できる可能性があると言える．
+次に，前後の部分文書の情報の加味では，精度を大幅に向上することを確認した．今回のSpokenQuery\&Docは，1つのクエリに対する正解文書が，1箇所に固まっていることが多かったため，特に効果が大きかったと考えられる．
+
+また，
+
+最後に
 
 \section{今後の課題}
-今後の課題としてまず，単語の意味的情報を，検索精度が向上するように従来の検索法に組み合わせることが挙げられる．
-word2vecを用いた文書検索法は，TF-IDFの検索精度が高くないクエリにおいて大きく精度を向上させる傾向があったため，
-互いの欠点を補い合うような組み合わせ方をすることで，精度向上に繋がるのではないかと考えられる．
+今後の課題としてまず，ディリクレスムージング時のパラメータの設定があげられる．今回は人手で調整し，MAP値が高くなる値を設定したが，今後は尤度関数を設定し，最適化することによりパラメータを調節したい．
 
-音声認識誤りの棄却において，棄却の閾値を変化させた場合にどのように精度が変化するのかを確認しなくてはならない．
-検索に有用な語を棄却してしまったため，閾値を負に設定することで，棄却の厳しさを緩和させることができる．
-また$sumPMI$が負になりやすい語に，何かしらの傾向が見られないか調査することで，検索に有用な語を棄却する問題を解決できると期待できる．
+TODO: その他, RNNとかKNが上手く行ってないところ，論文の精度が向上しないところ、キャッシュモデルとスライド統合が競合してしまっているところ
 
-最後に，本研究で取り上げた手法を複数組み合わせることで，検索精度がどのように変化するか確認することが重要である．
-本研究では要素を1つ1つ取り上げ，それぞれを独立に実験した．
-一方でこれらの手法は組み合わせることができる．これらの手法を組み合わせることで，更なる精度の向上が期待できる．
+% 単語の意味的情報を，検索精度が向上するように従来の検索法に組み合わせることが挙げられる． word2vecを用いた文書検索法は，TF-IDFの検索精度が高くないクエリにおいて大きく精度を向上させる傾向があったため，
+% 互いの欠点を補い合うような組み合わせ方をすることで，精度向上に繋がるのではないかと考えられる．
+
+% 音声認識誤りの棄却において，棄却の閾値を変化させた場合にどのように精度が変化するのかを確認しなくてはならない．
+% 検索に有用な語を棄却してしまったため，閾値を負に設定することで，棄却の厳しさを緩和させることができる．
+% また$sumPMI$が負になりやすい語に，何かしらの傾向が見られないか調査することで，検索に有用な語を棄却する問題を解決できると期待できる．
+
+% 最後に，本研究で取り上げた手法を複数組み合わせることで，検索精度がどのように変化するか確認することが重要である．
+% 本研究では要素を1つ1つ取り上げ，それぞれを独立に実験した．
+% 一方でこれらの手法は組み合わせることができる．これらの手法を組み合わせることで，更なる精度の向上が期待できる．
