--- a/integration.tex
+++ b/integration.tex
@@ -1,16 +1,8 @@
-\chapter{結果統合}
+\chapter{提案手法の統合}
 
-\section{a}
-% 有効な結果を示した
-% kaldi
-% 論文
-% キャッシュモデル or N-gram特徴量
-% 前後の部分文書の情報の加味
-% を利用して最大値を試す
+\section{提案手法}
 
-% TODO: 前章 = N章と名義した方が良い
-
-前章で検索性能に有効な結果を示した，論文の利用・Kaldiを用いた検索文書の利用・キャッシュモデルとN-gram特徴量の加味・前後の部分文書の情報を加味の手法を統合し，更なる検索精度の改善を行う．
+これまでに説明してきた手法の中で，検索性能の向上に有効な結果を示したものを統合し，検索精度の更なる向上を図る．検索性能の向上に有効な結果を示したものとして，論文の利用・Kaldiを用いた検索文書の利用・キャッシュモデル・前後の部分文書の情報を加味の手法があり，これらを統合し，検索精度の変化を分析する．
 
 \subsection{実験条件}
 実験条件を表\ref{t_ex_patern}に示す．
@@ -22,4 +14,8 @@
     \label{t_ex_patern}
 \end{table}
 
-基本的に論文の利用・Kaldiを用いた検索文書の利用・・前後の部分文書の情報を加味・クエリ尤度モデルを利用し，パターン1 クエリ尤度モデルのみ, パターン2 キャッシュモデル, パターン3 N-gramモデルを変化させたときのMAP値を算出し，分析する．また，パターン3のN-gramモデルのスムージングはKneser-Ney スムージングを利用し，N-gramのNは3とした．
+実験は，表\ref{t_condition1}と同様に，NTCIR12 SpokenQuery\&Doc Formal-run の SQSCR SGS retrieval条件で行った．
+基本的に，論文の利用とKaldiを用いた検索文書を用い，パターン(1) クエリ尤度モデルのみ, パターン(2) キャッシュモデルの2つのパターンについて，変化させたときのMAP値を算出する．
+また，2つのパターンのそれぞれに対し，前後の部分文書の情報を加味をした4パターンについて比較，分析した．
+
+% TODO: パラメータの説明もメモしといた方が良い
