--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,7 @@
 % タイトル（ゴシック体）
 {\gt
 \vspace*{2.5zh}
-音声ドキュメント検索手法の分析と精度改善\\ %タイトル1行目
+音声ドキュメント検索手法の\\分析と精度改善\\ %タイトル1行目
 
 \vspace{5zh}
 
@@ -129,7 +129,7 @@
 \fontsize{22pt}{22pt}\selectfont % フォントサイズ2pt，行送り20pt
 
 %年月
-2018年\hspace{0.5zh}3月\\% 年月
+2018年\hspace{0.5zh}2月\\% 年月
 %所属
 \vspace{0.5zh}
 岐阜大学大学院\hspace{1zh}工学研究科\hspace{1zh}\\%
@@ -193,7 +193,7 @@
 
 
 % 実験
-\include{chapter5}
+% \include{chapter5}
 
 \include{chapter6}
 	
