--- a/thanks.tex
+++ b/thanks.tex
@@ -2,39 +2,39 @@
 % 上記のことを満たしながら，目次は出す #-> \addcontentsline
 \chapter*{謝辞}
 \addcontentsline{toc}{chapter}{謝辞}
-本稿をまとめるにあたり，多くの方々のお世話になりました．以下に感謝の意を表します．\\
+% 本稿をまとめるにあたり，多くの方々のお世話になりました．以下に感謝の意を表します．\\
 
-% 先生方
-本研究のテーマを与えてくださり，温かいご指導を賜った，速水 悟教授，田村 哲嗣助教に深く感謝致します．
-速水 悟教授には，研究の方針に関して普段から厳しく，かつ的確なご指導を頂きました．
-田村 哲嗣助教には，研究の方針はもちろんのこと，研究の進捗に気を配って頂きました．
-お二人のバックアップがなければ，本稿をまとめられることはありませんでした．\\
+% % 先生方
+% 本研究のテーマを与えてくださり，温かいご指導を賜った，速水 悟教授，田村 哲嗣助教に深く感謝致します．
+% 速水 悟教授には，研究の方針に関して普段から厳しく，かつ的確なご指導を頂きました．
+% 田村 哲嗣助教には，研究の方針はもちろんのこと，研究の進捗に気を配って頂きました．
+% お二人のバックアップがなければ，本稿をまとめられることはありませんでした．\\
 
-% 研究に深く関わってくれた人
-次に研究の過程で，度々議論を交わし意見を頂きました竹原 正矩氏，川\UTF{7028} 徹也氏，田口 拓明氏，中嶋 航大氏に感謝の意を表します．
-皆様には先生方とのミーティングの合間に，研究の結果について深く議論を交わし，多くのアドバイスを頂きました．
-特にNTCIRプロジェクトのタスク参加者として実験プログラムの開発，及び修正を手伝い，実験の協力をして頂きました田口 拓明氏，
-同じく実験の協力をして頂きました中嶋 航大氏には，より一層の感謝の意を表します．
-% 長谷川先輩
-また音声文書検索の研究の先駆者であるOBの長谷川 貴一氏には，多忙の中研究室にお越し頂き，
-文書検索に関する多くのアドバイスを頂きました．ここに感謝の意を表します．\\
+% % 研究に深く関わってくれた人
+% 次に研究の過程で，度々議論を交わし意見を頂きました竹原 正矩氏，川\UTF{7028} 徹也氏，田口 拓明氏，中嶋 航大氏に感謝の意を表します．
+% 皆様には先生方とのミーティングの合間に，研究の結果について深く議論を交わし，多くのアドバイスを頂きました．
+% 特にNTCIRプロジェクトのタスク参加者として実験プログラムの開発，及び修正を手伝い，実験の協力をして頂きました田口 拓明氏，
+% 同じく実験の協力をして頂きました中嶋 航大氏には，より一層の感謝の意を表します．
+% % 長谷川先輩
+% また音声文書検索の研究の先駆者であるOBの長谷川 貴一氏には，多忙の中研究室にお越し頂き，
+% 文書検索に関する多くのアドバイスを頂きました．ここに感謝の意を表します．\\
 
-% 研究室5階メンバー
-速水・田村研究室E522のメンバーの
-森長 夕貴氏，臼田 寛明氏，加島 卓磨氏，田口 拓明氏，絹田 卓也氏，井端 ひかり氏，葛谷 恵美氏，中嶋 航大氏には心より感謝致します．
-出来のいい先輩ではありませんでしたが，本稿をまとめられるのは皆様の支えがあるからこそと認識しています．\\
-また同じ速水・田村研究室の現役の学生である，
-竹原 正矩氏，
-宇野 太久哉氏，河\UTF{FA11} 卓也氏，川\UTF{7028} 徹也氏，世古 拓海氏， 川嶋 大義氏，野尻 弘也氏，
-鵜飼 和渡氏，廣瀬 彩恵氏，宮川 加奈子氏には，週二回のゼミで研究に対して意見を頂いたのみならず，
-普段の研究活動においても多くのご支援を頂きました．
-ここに謝意を示します．\\
+% % 研究室5階メンバー
+% 速水・田村研究室E522のメンバーの
+% 森長 夕貴氏，臼田 寛明氏，加島 卓磨氏，田口 拓明氏，絹田 卓也氏，井端 ひかり氏，葛谷 恵美氏，中嶋 航大氏には心より感謝致します．
+% 出来のいい先輩ではありませんでしたが，本稿をまとめられるのは皆様の支えがあるからこそと認識しています．\\
+% また同じ速水・田村研究室の現役の学生である，
+% 竹原 正矩氏，
+% 宇野 太久哉氏，河\UTF{FA11} 卓也氏，川\UTF{7028} 徹也氏，世古 拓海氏， 川嶋 大義氏，野尻 弘也氏，
+% 鵜飼 和渡氏，廣瀬 彩恵氏，宮川 加奈子氏には，週二回のゼミで研究に対して意見を頂いたのみならず，
+% 普段の研究活動においても多くのご支援を頂きました．
+% ここに謝意を示します．\\
 
-% 秋葉先生，南條先生
-豊橋技術科学大学の秋葉 友良先生には，NTCIR11 SpokenQuery\&Docのタスクにおいて貴重なテストコレクションを頂いたのみならず，
-NTCIR11 カンファレンスの場において貴重な意見を頂きました．
-また同様に龍谷大学の南條 浩輝先生とは，NTCIR11 カンファレンスの場において深い議論を交わし合いました．
-お二人に感謝致します．\\
+% % 秋葉先生，南條先生
+% 豊橋技術科学大学の秋葉 友良先生には，NTCIR11 SpokenQuery\&Docのタスクにおいて貴重なテストコレクションを頂いたのみならず，
+% NTCIR11 カンファレンスの場において貴重な意見を頂きました．
+% また同様に龍谷大学の南條 浩輝先生とは，NTCIR11 カンファレンスの場において深い議論を交わし合いました．
+% お二人に感謝致します．\\
 
 % ソフトウェア開発
 % 最後に，文書検索のシステム構築にあたり，形態素解析エンジンの部分には
