処方の統合を作成

--- a/chapter6.tex
+++ b/chapter6.tex
@@ -11,9 +11,7 @@
 
 次に，前後の部分文書の情報の加味では，精度を大幅に向上することを確認した．今回のSpokenQuery\&Docは，1つのクエリに対する正解文書が，1箇所に固まっていることが多かったため，特に効果が大きかったと考えられる．
 
-また，
-
-最後に
+最後に，これまでに説明してきた手法の中で，検索性能の向上に有効な結果を示したものを統合し，検索精度の更なる向上を図った．その結果から，前後の部分文書の情報を加味した場合，MAP値は大幅に改善した．しかし，キャッシュモデルに前後の部分文書の情報を加味した場合，特徴量が重複してしまい，良い結果が得られなかった．
 
 \section{今後の課題}
 今後の課題としてまず，ディリクレスムージング時のパラメータの設定があげられる．今回は人手で調整し，MAP値が高くなる値を設定したが，今後は尤度関数を設定し，最適化することによりパラメータを調節したい．
