--- a/integration.tex
+++ b/integration.tex
@@ -18,4 +18,16 @@
 基本的に，論文の利用とKaldiを用いた検索文書を用い，パターン(1) クエリ尤度モデルのみ, パターン(2) キャッシュモデルの2つのパターンについて，変化させたときのMAP値を算出する．
 また，2つのパターンのそれぞれに対し，前後の部分文書の情報を加味をした4パターンについて比較，分析した．
 
+\subsection{実験結果}
+実験を行った結果を表\ref{t_integration}に示す．
+
+\begin{table}[htbp]
+    \centering
+    \caption{提案手法を統合したときのMAP値}
+    \includegraphics[width=7cm]{./image/t_integration.png}
+    \label{t_integration}
+\end{table}
+
+表\ref{t_integration}から，パターン(1)とパターン(2)において，それぞれに前後の部分文書の情報を加味した場合，MAP値は大幅に改善した．しかし，パターン(2)は，パターン(1)よりMAP値が大きいにも関わらず，前後の部分文書情報を加味したパターン(4)はパターン(3)よりもMAP値が大きくならなかった．これは，キャッシュモデルがすでに検索対象文書の出現場所以前の情報を保持しているため，前後の部分文書情報を加味した場合に重複した特徴量となってしまい，MAP値が低下するのではないかと考えられる．
+
 % TODO: パラメータの説明もメモしといた方が良い
