田村先生 2章修正途中

--- a/main.tex
+++ b/main.tex
@@ -219,14 +219,33 @@ NTCIR \\
 J.M.Ponte, W.B.Croft, A language modeling approach to information retrieval, 
 Proc. 21st Annual International ACM SIGIR conference on Research and Development in Information Retrieval, pp.275-281, 1998.
 
-% % MeCab
-% \bibitem{MeCab}
-% åœ¢æçŽ è§£æãšã³ãžã³ MeCab \\
-% \url{http://mecab.googlecode.com/svn/trunk/mecab/doc/index.html}
+% MeCab
+\bibitem{MeCab}
+形態素解析エンジン MeCab
+\url{http://mecab.googlecode.com/svn/trunk/mecab/doc/index.html}
 
-% \bibitem{ChaSen}
-% åœ¢æçŽ è§£æãšã³ãžã³ è¶ç­
-% \url{http://chasen-legacy.sourceforge.jp/}
+\bibitem{ChaSen}
+形態素解析器
+\url{http://chasen-legacy.sourceforge.jp/}
+
+% % 線形補完
+% \bibitem{smoothing1}
+% C. Zhai and J. Lafferty, A study of smoothing methods for language models
+% applied to information retrieval, ACM TOIS, vol.22, no.2, pp.179–214, 2004.
+
+% % ディリクレスムージング
+% \bibitem{smoothing2}
+% F. Jelinek and R.L. Mercer, Interpolated estimation of markov source parameters
+% from sparse data, Pattern Recognition in Practice, pp.381–397, 1980.
+
+% % knear ney
+% \bibitem{knear}
+% . Kneser and H. Ney. Improved backing-off for m-gram language modeling. In Proceedings of ICASSP, Vol. 1, pp. 181–184, 1995
+
+% ngram 線形補完
+% www.sigwi2.org/wp-content/uploads/2014/07/WI2_2013_8.pdf
+\bibitem{ngram_smooth1}
+北 研二，言語と計算 確率的言語モデル，東京大学出版，東京，1999．
 
 % \bibitem{BM25}
 % S. Robertson and H. Zaragoza, 
