田村先生 2章修正完了

--- a/main.tex
+++ b/main.tex
@@ -233,10 +233,10 @@ Proc. 21st Annual International ACM SIGIR conference on Research and Development
 % C. Zhai and J. Lafferty, A study of smoothing methods for language models
 % applied to information retrieval, ACM TOIS, vol.22, no.2, pp.179–214, 2004.
 
-% % ディリクレスムージング
-% \bibitem{smoothing2}
-% F. Jelinek and R.L. Mercer, Interpolated estimation of markov source parameters
-% from sparse data, Pattern Recognition in Practice, pp.381–397, 1980.
+% ディリクレスムージング
+\bibitem{smoothing2}
+F. Jelinek and R.L. Mercer, Interpolated estimation of markov source parameters
+from sparse data, Pattern Recognition in Practice, pp.381–397, 1980.
 
 % % knear ney
 % \bibitem{knear}
