田村先生 根本的な修正以外は一通り完成

--- a/main.tex
+++ b/main.tex
@@ -228,6 +228,18 @@ Proc. 21st Annual International ACM SIGIR conference on Research and Development
 形態素解析器
 \url{http://chasen-legacy.sourceforge.jp/}
 
+\bibitem{julius}
+汎用大語彙連続音声認識エンジン
+\url{http://julius.sourceforge.jp/}
+
+\bibitem{kaldi}
+音声認識の統合的なツールキット
+\url{http://kaldi.sourceforge.net/}
+
+\bibitem{csj}
+前川喜久男, 籠宮隆之, 小磯花絵, 小椋秀樹, 菊池英明, 日本語話し言葉コーパスの設計, 音声研究, 第4巻第2号, pp.51-61 (2000)
+                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+
 % % 線形補完
 % \bibitem{smoothing1}
 % C. Zhai and J. Lafferty, A study of smoothing methods for language models
@@ -238,6 +250,7 @@ Proc. 21st Annual International ACM SIGIR conference on Research and Development
 F. Jelinek and R.L. Mercer, Interpolated estimation of markov source parameters
 from sparse data, Pattern Recognition in Practice, pp.381–397, 1980.
 
+
 % % knear ney
 % \bibitem{knear}
 % . Kneser and H. Ney. Improved backing-off for m-gram language modeling. In Proceedings of ICASSP, Vol. 1, pp. 181–184, 1995
@@ -246,6 +259,10 @@ from sparse data, Pattern Recognition in Practice, pp.381–397, 1980.
 % www.sigwi2.org/wp-content/uploads/2014/07/WI2_2013_8.pdf
 \bibitem{ngram_smooth1}
 北 研二，言語と計算 確率的言語モデル，東京大学出版，東京，1999．
+
+\bibitem{hasegawa}
+北 研二，言語と計算 確率的言語モデル，東京大学出版，東京，1999．
+Kiichi Hasegawa, Masanori Takehara, Satoshi Tamura, Satoru Hayamizu, Spoken document retrieval using extended query model and web documents, Proceeding of the 10th NTCIR Conference, June 18-21, 2013
 
 % \bibitem{BM25}
 % S. Robertson and H. Zaragoza, 
