B4・M1 修正途中

--- a/chapter5.tex
+++ b/chapter5.tex
@@ -26,10 +26,10 @@
         \label{t_condition}
     \end{center}
 \end{table}
-実験は，NTCIR11 SpokenQuery\&Doc Formal-run の SQSCR SGS retrieval条件で行った．
+実験は，NTCIR11 SpokenQuery\&Doc Formal-run の SQSCR SGS Retrieval条件で行った．
 実験条件を表\ref{t_condition}に示す．
 特に指定しない限り，以下の実験ではクエリ・文書共に音声を人手で書き起こした条件で行った．
-評価尺度にはMAPを用いた．これはクエリ毎の平均適合率AP値の平均である．クエリ$q$に対するAP値$AP(q)$は式(\ref{eq_ap})で計算される．
+評価尺度にはMAP値を用いた．これはクエリ毎の平均適合率AP値の平均である．クエリ$q$に対するAP値$AP(q)$は式(\ref{eq_ap})で計算される．
 \begin{equation}
     AP(q) = \frac{1}{N} \sum^N_{i=1} \frac{i}{rank(i)}    \label{eq_ap}
 \end{equation}
