--- a/chapter6.tex
+++ b/chapter6.tex
@@ -5,11 +5,16 @@
 \section{まとめ}
 本研究では，文書検索において検索精度に影響を及ぼす要因を4つ取りあげ，それらについて分析を行った．
 
-まず，音声認識精度と検索精度に関しては，従来から使用しているJuliusによる音声認識結果より，高性能な音声認識システムであるKaldiを用いた音声認識結果を用いたときの方が，検索精度が上昇する事が確認できた．
+まず，「音声認識精度と検索精度」に関しては，従来から使用しているJuliusによる音声認識結果より，高性能な音声認識システムであるKaldiを用いた音声認識結果を用いたときの方が，検索精度が上昇する事が確認できた．
 
-クエリの関連文書を用いたクエリ尤度モデルの拡張では，論文を用いたときに，MAP値の向上が見られた．しかし，Web文書を用いたときは，MAP値にあまり変化が見られなかった．これは，Web文書がNTCIR11のクエリに対して，スムージングを行なえなかったためであると推察できる．論文を用いると，専門単語も広く言語モデルとして含められるため，スムージングできる可能性が高くなり，MAP値が上昇したのだと考えられる．
+次に，「クエリの関連文書を用いたクエリ尤度モデルの拡張」では，論文を用いたときに，MAP値の向上が見られた．しかし，Web文書を用いたときは，MAP値にあまり変化が見られなかった．これは，Web文書がNTCIR11のクエリに対して，スムージングを行なえなかったためであると推察できる．論文を用いると，専門単語も広く言語モデルとして含められるため，スムージングできる可能性が高くなり，MAP値が上昇したのだと考えられる．
 
-次に，前後の部分文書の情報の加味では，精度を大幅に向上することを確認した．今回のSpokenQuery\&Docは，1つのクエリに対する正解文書が，1箇所に固まっていることが多かったため，特に効果が大きかったと考えられる．
+そして，「文脈を考慮した言語特徴量の検討」では，キャッシュモデルを適応したときに，MAP値の向上が見られた．しかし，N-gramモデルやリカレントニューラルネットワーク言語モデルを適用した場合に精度が低下した．
+% TODO: とても怪しい、アルゴリズムから見直した方が良い
+N-gramモデルは，スムージングを行なっているが，uni-gramに比較して欠損している割合が高いため，欠損する場合に不確定な情報は挿入されてしまい，MAP値が減少してしまうことが考えられる．
+リカレントニューラルネットワーク言語モデルは，講義単位で文脈を保持している．そのため，保持する情報が長過ぎることがMAP値の減少を引き起こしていると推察できる．キャッシュモデルにおいて，単語履歴の長さが長過ぎる場合に，MAP値が減少することが確認されており，リカレントニューラルネットワーク言語モデルも同様に，この現象が起こっていると考えられる．
+
+また，「前後の部分文書の情報の加味」では，精度を大幅に向上することを確認した．今回のSpokenQuery\&Docは，1つのクエリに対する正解文書が，1箇所に固まっていることが多かったため，特に効果が大きかったと考えられる．
 
 最後に，これまでに説明してきた手法の中で，検索性能の向上に有効な結果を示したものを統合し，検索精度の更なる向上を図った．その結果から，前後の部分文書の情報を加味した場合，MAP値は大幅に改善した．しかし，キャッシュモデルに前後の部分文書の情報を加味した場合，特徴量が重複してしまい，良い結果が得られなかった．
 
