--- a/integration.tex
+++ b/integration.tex
@@ -13,9 +13,11 @@
     \includegraphics[width=7cm]{./image/t_ex_patern.png}
     \label{t_ex_patern}
 \end{table}
-実験は，表\ref{t_condition1}と同様に，NTCIR11 SpokenQuery\&Doc Formal-run の SQSCR SGS retrieval条件で行った．
+実験は，表\ref{t_condition1}と同様に，NTCIR11 SpokenQuery\&Doc Formal-run の SQSCR SGS Retrieval条件で行った．
 基本的に，論文の利用とKaldiを用いた検索文書を用い，パターン(1) クエリ尤度モデルのみ, パターン(2) キャッシュモデルの2つのパターンについて，変化させたときのMAP値を算出する．
 また，2つのパターンのそれぞれに対し，前後の部分文書の情報を加味をした4パターンについて比較，分析した．
+
+
 
 \subsection{実験結果}
 
