--- a/recognise_method.tex
+++ b/recognise_method.tex
@@ -1,5 +1,5 @@
 \chapter{音声認識精度と検索精度}
-本研究の対象としている，2014年に開催されたNTCIR11では，音声認識結果の文書にJuliusによる認識結果が公開されており．2016年に開催されたNTCIR12では,その音声認識結果の文書に加え，Kaldiを用いた音声認識結果の文書が公開された.Kaldiはディープニューラルネットワーク(DNN)ベースの大語彙音声認識を行っており,高性能な認識システムの構築がされており，認識精度が高い．本章では，二つの音声認識エンジンの検索精度の違いが，認識結果に与える影響を分析する.
+本研究の対象としている，2014年に開催されたNTCIR11では，音声認識結果の文書にJulius\cite{julius}による認識結果が公開されており．2016年に開催されたNTCIR12では,その音声認識結果の文書に加え，Kaldiを用いた音声認識結果の文書が公開された.Kaldiはディープニューラルネットワーク(DNN)ベースの大語彙音声認識を行っており,高性能な認識システムの構築がされており，認識精度が高い．本章では，二つの音声認識エンジンの検索精度の違いが，認識結果に与える影響を分析する.
 
 % juliusとか
 % http://www.ar.media.kyoto-u.ac.jp/lab/bib/jpn/KAW-orc04.pdf
@@ -8,7 +8,7 @@
 
 % 参考: http://www.ar.media.kyoto-u.ac.jp/lab/project/paper/RI-HIS09.pdf
 \section{Julius}
-Julius\cite{julius}の最も大きな特徴は汎用性・可搬性にある．音響モデルや言語モデルの仕様は標準的なフォーマットを採用しており，置き換えたり修正したりすることが容易である．これにより，大語彙のディクテーションから小語彙の数字認識まで，様々な使用環境や目的に応じたシステムを構築することが簡単にできる．また言語モデルも，大規模な統計モデルである単語のN-gram，文パターンを人手で与える記述文法，辞書のみを用いる単語認識といったように多様な形式をサポートしており，使用環境に応じて適切なモデルを使い分けることができる．さらに，ソースコードが公開されているので，ユーザ独自の修正や拡張も可能である．
+Juliusの最も大きな特徴は汎用性・可搬性にある．音響モデルや言語モデルの仕様は標準的なフォーマットを採用しており，置き換えたり修正したりすることが容易である．これにより，大語彙のディクテーションから小語彙の数字認識まで，様々な使用環境や目的に応じたシステムを構築することが簡単にできる．また言語モデルも，大規模な統計モデルである単語のN-gram，文パターンを人手で与える記述文法，辞書のみを用いる単語認識といったように多様な形式をサポートしており，使用環境に応じて適切なモデルを使い分けることができる．さらに，ソースコードが公開されているので，ユーザ独自の修正や拡張も可能である．
 
 % TODO: 参考文献 
 % 音響学会の論文参考
@@ -24,7 +24,7 @@ Juliusの音声認識結果とKaldiの音声認識結果の精度
 
 \begin{table}[htbp]
     \begin{center}
-        \caption{SpokenQuery\&Doc Formal-runのSQSCR SGS retrieval条件}
+        \caption{SpokenQuery\&Doc Formal-runのSQSCR SGS Retrieval条件}
         \begin{tabular}{|c|c|}
             \hline
             全体文書数 & 98文書 \\ \hline
