--- a/web_expand.tex
+++ b/web_expand.tex
@@ -21,7 +21,7 @@
 
 
 \subsection{Web 文書の取得} \label{sec_webquery}
-Web文書の取得方法は，まず各クエリの単語に対してTF-IDF値を計算し，TF-IDF値のスコアの上位5単語を抽出する．そして，5単語から3単語を取り出す全て組み合わせおいて，Web検索を行い，各検索に対し10件のWeb文書を取得する．そのため，１クエリに対し，Web文書を100件取得した．最後に得られたWeb文書全てを，1つの巨大な文書とみなし，$P(w_i│θ_W)$ を計算し，式(\ref{eq_expanddirichlet})で利用する．
+Web文書の取得方法は，まず各クエリの単語に対してTF-IDF値を計算し，TF-IDF値のスコアの上位5単語を抽出する．そして，5単語から3単語を取り出す全て組み合わせにおいて，Web検索を行い，各検索に対し10件のWeb文書を取得する．そのため，１クエリに対し，Web文書を100件取得した．最後に得られたWeb文書全てを，1つの巨大な文書とみなし，$P(w_i│θ_W)$ を計算し，式(\ref{eq_expanddirichlet})で利用する．
 ここでIDFの計算に，NTCIRで配布されている講演文書を利用した．
 
 % \section{評価実験}
@@ -61,7 +61,7 @@ Web文書と同様に論文によるクエリの情報量の拡張を図る．NT
 
 \subsection{論文の取得}
 日本音響学会の論文について，2005年から2014年までの英語の論文を除いた8275件を用いた．
-そして，各クエリとすべての論文に対し，\ref{sec_tfidf}節で述べたように，文書に対しTFを計算し，cos類似度を測ることによって，書くクエリに対し，全8275件の論文から類似度の高い論文1000件を抽出する．最後に得られたWeb文書全てを，1つの巨大な文書とみなし，$P(w_i│θ_P)$ を計算し，式(\ref{eq_expanddirichlet_paper})で利用する．
+そして，各クエリとすべての論文に対し，\ref{sec_tfidf}節で述べたように，文書に対しTFを計算し，cos類似度を測ることによって，各クエリに対し，全8275件の論文から類似度の高い論文1000件を抽出する．最後に得られたWeb文書全てを，1つの巨大な文書とみなし，$P(w_i│θ_P)$ を計算し，式(\ref{eq_expanddirichlet_paper})で利用する．
 
 \section{評価実験}
 クエリに対するクエリ尤度モデルの拡張として，Web文書と論文を利用したときの検索精度の変化を調べる．
@@ -95,7 +95,7 @@ Web文書と同様に論文によるクエリの情報量の拡張を図る．NT
     \end{center}
 \end{table}
 
-実験は，NTCIR11 SpokenQuery\&Doc Formal-run の SQSCR SGS retrieval条件で行った．
+実験は，NTCIR11 SpokenQuery\&Doc Formal-run の SQSCR SGS Retrieval条件で行った．
 実験条件を表\ref{t_condition1}と表\ref{t_condition2}に示す．
 また，特に指定しない限り，以下の実験ではクエリ・文書共に音声認識結果を用いる事とする．
 Web文書は，googleの検索結果をもとに取得し，スムージングパラメータ $\mu$ と $\nu$ は経験的に定めた．
