一度目の修正をすぐに対応できる範囲で修正

--- a/chapter6.tex
+++ b/chapter6.tex
@@ -21,7 +21,7 @@ N-gramモデルは，スムージングを行なっているが，uni-gramに比
 \section{今後の課題}
 今後の課題としてまず，ディリクレスムージング時のパラメータの設定があげられる．今回は人手で調整し，MAP値が高くなる値を設定したが，今後は尤度関数を設定し，最適化することによりパラメータを調節したい．
 
-TODO: その他, RNNとかKNが上手く行ってないところ，論文の精度が向上しないところ、キャッシュモデルとスライド統合が競合してしまっているところ
+% TODO: その他, RNNとかKNが上手く行ってないところ，論文の精度が向上しないところ、キャッシュモデルとスライド統合が競合してしまっているところ
 
 % 単語の意味的情報を，検索精度が向上するように従来の検索法に組み合わせることが挙げられる． word2vecを用いた文書検索法は，TF-IDFの検索精度が高くないクエリにおいて大きく精度を向上させる傾向があったため，
 % 互いの欠点を補い合うような組み合わせ方をすることで，精度向上に繋がるのではないかと考えられる．
